Finished thank you page

--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Thank you for your order, <%= order.name %>!</h1>
+    <h3>Order Summery:</h3>
+    <p>Email: <%= order.email %></p>
+    <p>Flavor: <%= order.flavor %></p>
+    <p>Cone: <%= order.cone %></p>
 </body>
 </html>
