--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,11 +10,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Icecream</title>
-    <link rel = "stylesheet" href = "styles/pizza-styles.css">
-    <link id = "icon" rel = "icon" type = "image/png" href = "images/icecream.png">
+    <link rel = "stylesheet" href = "styles/styles.css">
 </head>
 <body>
 
+    <form action="/thankyou" method="post">
     <div id = "main">
         <h1>Icecream Order Form</h1>
 
@@ -60,7 +60,9 @@
                        <input type = "checkbox" name = "toppings" value = "whippedCream">Whipped Cream
                 </label>
             </div>
+            <button type="submit">Submit Order</button>
         </fieldset> 
     </div>
+    </form>
 </body>
 </html>
