--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "/styles/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,5 +12,6 @@
     <p>Email: <%= order.email %></p>
     <p>Flavor: <%= order.flavor %></p>
     <p>Cone: <%= order.cone %></p>
+    <p>Toppings: <%= order.toppings %></p>
 </body>
 </html>
